Remove plugin support stuff